--- a/vlr_knights.ipynb
+++ b/vlr_knights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7a8dffa7",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3a4d5454",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 94,
+   "id": "7ad50202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a game_id variable\n",
+    "game_id = []\n",
+    "number_of_games = 1\n",
+    "\n",
+    "i = 1\n",
+    "while i <= number_of_games:\n",
+    "    x = 0\n",
+    "    while x < 5:\n",
+    "        game_id.append(i)\n",
+    "        x+=1\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Split', 'Split', 'Split', 'Split', 'Split']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the map\n",
+    "# map to the area we need\n",
+    "stat_game = soup.find('div', class_='vm-stats-game')\n",
+    "game_header = stat_game.find('div', class_='vm-stats-game-header')\n",
+    "div_map = game_header.find('div', class_='map')\n",
+    "div_style = div_map.find('div')\n",
+    "# get the text needed\n",
+    "span_map = div_style.find('span').text\n",
+    "\n",
+    "# remove the weird letters\n",
+    "p = '\\n\\t*'\n",
+    "p1 = '\\t*'\n",
+    "span_map = re.sub(p, '', span_map)\n",
+    "span_map = re.sub(p1, '', span_map)\n",
+    "\n",
+    "# remove the word PICK from the string\n",
+    "i = []\n",
+    "for x in span_map:\n",
+    "    i.append(x)\n",
+    "i.remove('P')\n",
+    "i.remove('I')\n",
+    "i.remove('C')\n",
+    "i.remove('K')\n",
+    "\n",
+    "# append the map list so that it is equal length \n",
+    "map = []\n",
+    "map_str = ''.join(i)\n",
+    "\n",
+    "i = 0\n",
+    "while i<5:\n",
+    "    map.append(map_str)\n",
+    "    i+=1\n",
+    "\n",
+    "print(map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8f583b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Akrew', 'Akrew', 'Akrew', 'Akrew', 'Akrew']\n",
+      "[8, 8, 8, 8, 8]\n",
+      "[5, 5, 5, 5, 5]\n",
+      "[3, 3, 3, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# score for team L\n",
+    "# map to the data\n",
+    "stat_game = soup.find('div', class_='vm-stats-game')\n",
+    "game_header = stat_game.find('div', class_='vm-stats-game-header')\n",
+    "div_team = game_header.find('div', class_='team')\n",
+    "\n",
+    "# create lists to hold the data\n",
+    "score_left = []\n",
+    "ct_score_left = []\n",
+    "t_score_left = []\n",
+    "team_left = []\n",
+    "\n",
+    "# append the values to each list\n",
+    "score_l = div_team.find('div', class_='score').text\n",
+    "ct_score_l = div_team.find('span', class_='mod-ct').text\n",
+    "t_score_l = div_team.find('span', class_='mod-t').text\n",
+    "team_l = div_team.find('div', class_='team-name').text\n",
+    "\n",
+    "# remove the weird text by using regex\n",
+    "p = '\\n\\t*'\n",
+    "p1 = '\\t*'\n",
+    "team_l = re.sub(p, '', team_l)\n",
+    "team_l = re.sub(p1, '', team_l)\n",
+    "\n",
+    "# append the lists to have 5 of each in them so that we can paste it into the table\n",
+    "i = 0\n",
+    "while i<5:\n",
+    "    team_left.append(team_l)\n",
+    "    score_left.append(int(score_l))\n",
+    "    ct_score_left.append(int(ct_score_l))\n",
+    "    t_score_left.append(int(t_score_l))\n",
+    "    i+=1\n",
+    "\n",
+    "print(team_left)\n",
+    "print(score_left)\n",
+    "print(ct_score_left)\n",
+    "print(t_score_left)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "871eb945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['100 Thieves', '100 Thieves', '100 Thieves', '100 Thieves', '100 Thieves']\n",
+      "[13, 13, 13, 13, 13]\n",
+      "[6, 6, 6, 6, 6]\n",
+      "[7, 7, 7, 7, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# score for team R\n",
+    "stat_game = soup.find('div', class_='vm-stats-game')\n",
+    "game_header = stat_game.find('div', class_='vm-stats-game-header')\n",
+    "div_team_r = game_header.find('div', class_='team mod-right')\n",
+    "\n",
+    "# create lists to hold the data\n",
+    "score_right = []\n",
+    "ct_score_right = []\n",
+    "t_score_right = []\n",
+    "team_right = []\n",
+    "\n",
+    "# append the values to each list\n",
+    "score_r = div_team_r.find('div', class_='score').text\n",
+    "ct_score_r = div_team_r.find('span', class_='mod-ct').text\n",
+    "t_score_r = div_team_r.find('span', class_='mod-t').text\n",
+    "team_r = div_team_r.find('div', class_='team-name').text\n",
+    "\n",
+    "# remove the weird text by using regex\n",
+    "p = '\\n\\t*'\n",
+    "p1 = '\\t*'\n",
+    "team_r = re.sub(p, '', team_r)\n",
+    "team_r = re.sub(p1, '', team_r)\n",
+    "\n",
+    "# append the lists to have 5 of each in them so that we can paste it into the table\n",
+    "i = 0\n",
+    "while i<5:\n",
+    "    team_right.append(team_r)\n",
+    "    score_right.append(int(score_r))\n",
+    "    ct_score_right.append(int(ct_score_r))\n",
+    "    t_score_right.append(int(t_score_r))\n",
+    "    i+=1\n",
+    "\n",
+    "print(team_right)\n",
+    "print(score_right)\n",
+    "print(ct_score_right)\n",
+    "print(t_score_right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "1be41c1c",
    "metadata": {},
    "outputs": [
@@ -94,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "49547d36",
    "metadata": {},
    "outputs": [
@@ -142,7 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "id": "fccbd45e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# complete the dictionary\n",
+    "# needs to have all player names...so that means I need to append the list so that all players are in it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "id": "34c1cad2",
    "metadata": {},
    "outputs": [
@@ -167,8 +361,18 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Game ID</th>\n",
        "      <th>Player Name</th>\n",
        "      <th>Team</th>\n",
+       "      <th>Abbreviation</th>\n",
+       "      <th>Playing Against</th>\n",
+       "      <th>Map</th>\n",
+       "      <th>Score: Team 1</th>\n",
+       "      <th>Score CT: Team 1</th>\n",
+       "      <th>Score T: Team 1</th>\n",
+       "      <th>Score: Team 2</th>\n",
+       "      <th>Score CT: Team 2</th>\n",
+       "      <th>Score T: Team 2</th>\n",
        "      <th>ACS Total</th>\n",
        "      <th>ACS Attack</th>\n",
        "      <th>ACS Defense</th>\n",
@@ -177,40 +381,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>jovahnii</td>\n",
+       "      <td>Akrew</td>\n",
        "      <td>Akre</td>\n",
+       "      <td>100 Thieves</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>265</td>\n",
        "      <td>202</td>\n",
        "      <td>314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>ZachaREEE</td>\n",
+       "      <td>Akrew</td>\n",
        "      <td>Akre</td>\n",
+       "      <td>100 Thieves</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>191</td>\n",
        "      <td>153</td>\n",
        "      <td>220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>Neon</td>\n",
+       "      <td>Akrew</td>\n",
        "      <td>Akre</td>\n",
+       "      <td>100 Thieves</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>189</td>\n",
        "      <td>192</td>\n",
        "      <td>188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>Paincakes</td>\n",
+       "      <td>Akrew</td>\n",
        "      <td>Akre</td>\n",
+       "      <td>100 Thieves</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>186</td>\n",
        "      <td>125</td>\n",
        "      <td>232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>gucc107</td>\n",
+       "      <td>Akrew</td>\n",
        "      <td>Akre</td>\n",
+       "      <td>100 Thieves</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>142</td>\n",
        "      <td>203</td>\n",
        "      <td>97</td>\n",
@@ -220,15 +474,29 @@
        "</div>"
       ],
       "text/plain": [
-       "  Player Name  Team  ACS Total  ACS Attack  ACS Defense\n",
-       "0   jovahnii   Akre        265         202          314\n",
-       "1  ZachaREEE   Akre        191         153          220\n",
-       "2       Neon   Akre        189         192          188\n",
-       "3  Paincakes   Akre        186         125          232\n",
-       "4    gucc107   Akre        142         203           97"
+       "   Game ID Player Name   Team Abbreviation Playing Against    Map  \\\n",
+       "0        1   jovahnii   Akrew         Akre     100 Thieves  Split   \n",
+       "1        1  ZachaREEE   Akrew         Akre     100 Thieves  Split   \n",
+       "2        1       Neon   Akrew         Akre     100 Thieves  Split   \n",
+       "3        1  Paincakes   Akrew         Akre     100 Thieves  Split   \n",
+       "4        1    gucc107   Akrew         Akre     100 Thieves  Split   \n",
+       "\n",
+       "   Score: Team 1  Score CT: Team 1  Score T: Team 1  Score: Team 2  \\\n",
+       "0              8                 5                3             13   \n",
+       "1              8                 5                3             13   \n",
+       "2              8                 5                3             13   \n",
+       "3              8                 5                3             13   \n",
+       "4              8                 5                3             13   \n",
+       "\n",
+       "   Score CT: Team 2  Score T: Team 2  ACS Total  ACS Attack  ACS Defense  \n",
+       "0                 6                7        265         202          314  \n",
+       "1                 6                7        191         153          220  \n",
+       "2                 6                7        189         192          188  \n",
+       "3                 6                7        186         125          232  \n",
+       "4                 6                7        142         203           97  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,23 +504,35 @@
    "source": [
     "# create a dictionary to hold all of the data\n",
     "matches_dict = {\n",
+    "    'Game ID': game_id,\n",
     "    'Player Name': name,\n",
-    "    'Team': team,\n",
+    "    'Team': team_left,\n",
+    "    'Abbreviation': team,\n",
+    "    'Playing Against': team_right,\n",
+    "    'Map': map,\n",
+    "    # 'Team Map Pick':\n",
+    "    'Score: Team 1': score_left,\n",
+    "    'Score CT: Team 1': ct_score_left,\n",
+    "    'Score T: Team 1': t_score_left,\n",
+    "    'Score: Team 2': score_right,\n",
+    "    'Score CT: Team 2': ct_score_right,\n",
+    "    'Score T: Team 2': t_score_right,\n",
+    "    # 'Match Length':\n",
     "    'ACS Total': acs_both,\n",
     "    'ACS Attack': acs_t,\n",
     "    'ACS Defense': acs_ct,\n",
-    "    'Kill Total': \n",
-    "    'Kill Attack':\n",
-    "    'Kill Defense':\n",
-    "    'Death Total':\n",
-    "    'Death Attack':\n",
-    "    'Death Defense':\n",
-    "    'Assist Total':\n",
-    "    'Assist Attack':\n",
-    "    'Assist Defense':\n",
-    "    'ADR':\n",
-    "    'First Kills':\n",
-    "    'First Deaths':\n",
+    "    # 'Kill Total': \n",
+    "    # 'Kill Attack':\n",
+    "    # 'Kill Defense':\n",
+    "    # 'Death Total':\n",
+    "    # 'Death Attack':\n",
+    "    # 'Death Defense':\n",
+    "    # 'Assist Total':\n",
+    "    # 'Assist Attack':\n",
+    "    # 'Assist Defense':\n",
+    "    # 'ADR':\n",
+    "    # 'First Kills':\n",
+    "    # 'First Deaths':\n",
     "}\n",
     "\n",
     "# create a df from the dictionary\n",
