--- a/jupyter_func_testing.ipynb
+++ b/jupyter_func_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f9e5b3b4",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,14 @@
     "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import timeit"
+    "import timeit\n",
+    "import pymongo\n",
+    "# from vlr_func_test import vlr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "id": "e63b65c9",
    "metadata": {},
    "outputs": [],
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "ef8bf000",
    "metadata": {},
    "outputs": [
@@ -344,7 +346,7 @@
       "No game data for game 50\n",
       "No game data for game 80\n",
       "No game data for game 88\n",
-      "41.511065099999996\n"
+      "39.87411729999985\n"
      ]
     }
    ],
@@ -358,116 +360,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
+   "id": "f215fa34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n",
+      "1110\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(game_id_player))\n",
+    "print(len(name))\n",
+    "print(len(team_abrev))\n",
+    "print(len(game_map_player))\n",
+    "print(len(acs_both))\n",
+    "print(len(acs_t))\n",
+    "print(len(acs_ct))\n",
+    "print(len(kill_both))\n",
+    "print(len(kill_t))\n",
+    "print(len(kill_ct))\n",
+    "print(len(death_both))\n",
+    "print(len(death_t))\n",
+    "print(len(death_ct))\n",
+    "print(len(assist_both))\n",
+    "print(len(assist_t))\n",
+    "print(len(assist_ct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9e8aaf68",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Game ID</th>\n",
-       "      <th>Map</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Icebox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Haven</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Icebox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Ascent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Ascent</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>106</td>\n",
-       "      <td>Bind</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>107</td>\n",
-       "      <td>Bind</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>108</td>\n",
-       "      <td>Split</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>109</td>\n",
-       "      <td>Split</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>110</td>\n",
-       "      <td>Split</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>111 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Game ID     Map\n",
-       "0          0  Icebox\n",
-       "1          1   Haven\n",
-       "2          2  Icebox\n",
-       "3          3  Ascent\n",
-       "4          4  Ascent\n",
-       "..       ...     ...\n",
-       "106      106    Bind\n",
-       "107      107    Bind\n",
-       "108      108   Split\n",
-       "109      109   Split\n",
-       "110      110   Split\n",
-       "\n",
-       "[111 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'game_id_match' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2372/4101304849.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m matches_dict = {\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;34m'Game ID'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mgame_id_match\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#     'Team 1': team_left,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#     'Score: Team 1': score_left,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#     'Team 2': team_right,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'game_id_match' is not defined"
+     ]
     }
    ],
    "source": [
